--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,14 @@
-<!doctype html>
-<html lang=”en”>
+<!DOCTYPE html>
+<html lang="en">
+  
 <head>
- <meta charset=”utf-8">
- <title>Quiz</title>
+  <title>Quiz</title>
+  <link rel="stylesheet" href="styles/styles.css" />
 </head>
+
 <body>
- <div id=”root”></div>
+  <div id="root"></div>
+  <script type="text/javascript" src="javascript/bundle.js"></script>
 </body>
+
 </html>
